두번째 연습!!!

--- a/HomePage/yjkim/2_who.html
+++ b/HomePage/yjkim/2_who.html
@@ -1,10 +1,19 @@
-<html>
+<!DOCTYPE html>
+<html lang="ko">
 	<head>
+		<meta charest="UTF-8">
 		<title>JJProject</title>
+		<link type="text/css" href="2_who.css" rel="stylesheet">
 	</head>
 	<body>
 		<h1>WHO WE ARE</h1>
-		<p>DESIGNER</P>
-		<P>DEVELOPER</P>
+		<div class="designer">
+			<div class="title">DESIGNER</div>
+			<div class="text">JJProject에서 디자이너를 담당하고 있습니다.</div>
+		</div>
+		<div class="developer">
+			<div class="title">DEVELOPER</div>
+			<div class="text">JJProject에서 개발자를 담당하고 있습니다.</div>
+		</div>
 	</body>
 </html>
