--- a/HomePage/yjkim/3_work.html
+++ b/HomePage/yjkim/3_work.html
@@ -4,10 +4,7 @@
 		<meta charest="UTF-8">
 		<title>JJProject</title>
 	</head>
-		<div>
-			<h1>WHO WE ARE</h1>
-		</div>
-		<div>
-			<h1>WHAT TO DO</h1>
-		</div>
+	<body>
+		<h1>WHAT TO DO</h1>
+	</body>
 </html>
