휴우 어려워

--- a/HomePage/yjkim/3_work.html
+++ b/HomePage/yjkim/3_work.html
@@ -3,8 +3,18 @@
 	<head>
 		<meta charest="UTF-8">
 		<title>JJProject</title>
+		<link type="text/css" href="3_work.css" rel="stylesheet">
 	</head>
 	<body>
 		<h1>WHAT TO DO</h1>
+		<div class="card">
+			<img class="thumnail">
+		</div>
+		<div class="card">
+			<img class="thumnail">
+		</div>
+		<div class="card">
+			<img class="thumnail">
+		</div>
 	</body>
 </html>
