--- a/HomePage/yjkim/1_main.html
+++ b/HomePage/yjkim/1_main.html
@@ -3,11 +3,18 @@
 	<head>
 		<meta charest="UTF-8">
 		<title>JJProject</title>
+		<link type="text/css" href="1_main.css" rel="stylesheet">
 	</head>
-		<div>
-			<h1>WHO WE ARE</h1>
+	<body>
+		<a href="2_who.html">
+			<div id="who">
+				<P>WHO WE ARE</P>
+			</div>
+		</a>
+		<div id="what">
+			<a href="3_work.html"id="whatimage">
+			<span class>WHAT TO DO</span>
+			</a>
 		</div>
-		<div>
-			<h1>WHAT TO DO</h1>
-		</div>
+	</body>
 </html>
