--- a/HomePage/yjkim/2_who.html
+++ b/HomePage/yjkim/2_who.html
@@ -3,8 +3,9 @@
 	<head>
 		<meta charest="UTF-8">
 		<title>JJProject</title>
-		<link type="text/css" href="2_who.css" rel="stylesheet">
+		<link type="text/css" href="2_who.css" rel="stylesheet" media="all">
 	</head>
+	<script src="js/js.js"></script>
 	<body>
 		<h1>WHO WE ARE</h1>
 		<div class="designer">
