--- a/HomePage/yjkim/1_main.html
+++ b/HomePage/yjkim/1_main.html
@@ -6,14 +6,14 @@
 		<link type="text/css" href="1_main.css" rel="stylesheet">
 	</head>
 	<body>
-		<a href="2_who.html">
-			<div id="who">
-				<P>WHO WE ARE</P>
-			</div>
-		</a>
+		<div id="who">
+			<a href="2_who.html">
+				<p>WHO<br>WE ARE</p>
+			</a>
+		</div>
 		<div id="what">
-			<a href="3_work.html"id="whatimage">
-			<span class>WHAT TO DO</span>
+			<a href="3_work.html">
+				<p>WHAT <br>TO DO</p>
 			</a>
 		</div>
 	</body>
