--- a/HomePage/yjkim/3_work.html
+++ b/HomePage/yjkim/3_work.html
@@ -7,14 +7,18 @@
 	</head>
 	<body>
 		<h1>WHAT TO DO</h1>
+
 		<div class="card">
-			<img class="thumnail">
+			<div class="contents thumb_1"></div>
+			<p>project 1</p>
 		</div>
 		<div class="card">
-			<img class="thumnail">
+			<div class="contents thumb_2"></div>
+			<p>project 2</p>
 		</div>
 		<div class="card">
-			<img class="thumnail">
+			<div class="contents thumb_3"></div>
+			<p>project 3</p>
 		</div>
 	</body>
 </html>
