모든페이지 구성 완료!
전부 다 구성했지롱 > <!!

--- a/HomePage/yjkim/3_work.html
+++ b/HomePage/yjkim/3_work.html
@@ -4,21 +4,25 @@
 		<meta charest="UTF-8">
 		<title>JJProject</title>
 		<link type="text/css" href="3_work.css" rel="stylesheet">
+		<link type="text/css" href="image.css" rel="stylesheet">
 	</head>
 	<body>
 		<h1>WHAT TO DO</h1>
-
-		<div class="card">
-			<div class="contents thumb_1"></div>
-			<p>project 1</p>
-		</div>
-		<div class="card">
-			<div class="contents thumb_2"></div>
-			<p>project 2</p>
-		</div>
-		<div class="card">
-			<div class="contents thumb_3"></div>
-			<p>project 3</p>
+		<div id = "cards">
+				<div class="card">
+					<a href="4_project.html"></a>
+					<div class="contents thumb_1"></div>
+					<p>project 1</p>
+				</div>
+				<div class="card">
+					<a href="5_project.html"></a>
+					<div class="contents thumb_2"></div>
+					<p>project 2</p>
+				</div>
+				<div class="card">
+					<div class="contents thumb_3"></div>
+					<p>project 3</p>
+				</div>
 		</div>
 	</body>
 </html>
